seperated all computer logic into AI class & js file

--- a/game.html
+++ b/game.html
@@ -39,7 +39,9 @@
       </div>
     </div>
   </body>
-  <script src="./game.js"></script>
   <script src="./play.js"></script>
+  <script src="./game.js"></script>
+  <script src="./ai.js"></script>
+
 </html>
 
